gcc/testsuite/g++.dg/cpp0x/constexpr-delete.C
// { dg-options -std=c++0x }

constexpr bool never() = delete; // { dg-error "constexpr .* deleted" }
